@@ -30,6 +30,7 @@ Not yet released.
 - :issue:`492`: support JSON API recommended "simple" filtering.
 - :issue:`508`: flush the session before postprocessors, and commit after.
 - :issue:`536`: adds support for single-table inheritance.
+- :issue:`540`: correctly support models that don't have a column named "id".
 - :issue:`546`: adds support for joined table inheritance.
 - :issue:`559`: fixes bug that stripped attributes with JSON API reserved names
   (like "type") when deserializing resources.
